examples/example.rid
struct Foo{
    x: i32,
    y: i32,
}

trait Bar{
    fn bar();
}

impl Self, Bar for Foo{
    fn bar(){
        
    }

    fn help()->str{
        "HELP"
    }
}

fun main(){
    let t: Foo;
    {
        let x = Foo{x:1, y:1};
        t = x
        print(x) // error
    }
    {
        let y = &Foo{x:1, y:1};
        t = y.clone()
        print(y) // yes
    }
}